--- a/TheTopBulgarianChannels/Views/_ViewImports.cshtml
+++ b/TheTopBulgarianChannels/Views/_ViewImports.cshtml
@@ -1,3 +1,4 @@
 ﻿@using TheTopBulgarianChannels
 @using TheTopBulgarianChannels.Models
+@using TheTopBulgarianChannels.DataAccess
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
