Correction model in index

--- a/TheTopBulgarianChannels/Views/Home/Index.cshtml
+++ b/TheTopBulgarianChannels/Views/Home/Index.cshtml
@@ -1,4 +1,4 @@
-﻿@model YouTubeChannelViewModel
+﻿@model YouTubeChannelViewModelList
 
 @if (Model == null || Model.List == null || Model.List.Count == 0)
 {
