--- a/TheTopBulgarianChannels/Views/Shared/_Layout.cshtml
+++ b/TheTopBulgarianChannels/Views/Shared/_Layout.cshtml
@@ -22,10 +22,17 @@
                             <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Index">Home</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a>
+                            <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="YouTube">YouTube</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="AddYouTubeChannel">Add YouTube Channel</a>
+                        </li>
+                         <li class="nav-item">
+                            <a class="nav-link text-dark" asp-area="" asp-controller="YouTubeChannels" asp-action="Index">YouTubeChannels</a>
                         </li>
                     </ul>
                 </div>
+                
             </div>
         </nav>
     </header>
