--- a/TheTopBulgarianChannels/Views/Shared/_Layout.cshtml
+++ b/TheTopBulgarianChannels/Views/Shared/_Layout.cshtml
@@ -30,6 +30,9 @@
                          <li class="nav-item">
                             <a class="nav-link text-dark" asp-area="" asp-controller="YouTubeChannels" asp-action="Index">YouTubeChannels</a>
                         </li>
+                         <li class="nav-item">
+                            <a class="nav-link text-dark" asp-area="" asp-controller="Instagram" asp-action="Index">Instagram</a>
+                        </li>
                     </ul>
                 </div>
                 
