--- a/TheTopBulgarianChannels/Views/Home/Index.cshtml
+++ b/TheTopBulgarianChannels/Views/Home/Index.cshtml
@@ -1,56 +1,5 @@
 ﻿
-<h1 class="site_heading">Live Sub Counter</h1>
-<form class="form-inline">
-    <input type="text" id="channel_id" placeholder="Channel ID (UCC2-EIXX2LSYInLPSR3kxPQ)">
-    <input type="button" onclick="result(document.getElementById('channel_id').value)" value="Count">
-</form>
-<div class="main_content">
-    <span id="channel_name"></span>
-    <span id="sub_count"></span>
-</div>
-<script>
-function result(channel_id)
-{
-	if (channel_id === "")
-	{
-		return alert("Please enter a Channel ID");
-	}
-	document.getElementById("channel_id").value = "";
-	
-	//for the request
-	request_data(channel_id);
-}
-
-function request_data(channel_id)
-{
-	var xhttp = new XMLHttpRequest();
-	xhttp.onreadystatechange = function()
-	{
-		if (this.readyState == 4 && this.status == 200)
-		{
-			var output = this.responseText;
-			output = JSON.parse(output);
-			document.getElementById("channel_name").innerHTML = output.items[0].snippet["title"];
-			document.getElementById("sub_count").style.display = "inline";
-			if(output.items[0].statistics["hiddenSubscriberCount"] === true)
-			{
-				console.log("Subscriber count is hidden by the channel");
-			   	return document.getElementById("sub_count").innerHTML = "N/A";
-			}
-			document.getElementById("sub_count").innerHTML = output.items[0].statistics["subscriberCount"];
-            
-         
-		}
-		else if(this.readyState == 4)
-		{
-			return console.log(JSON.parse(this.responseText)["error"]["message"]);
-		}
-	};
-	xhttp.open("GET", "https://www.googleapis.com/youtube/v3/channels?part=snippet,statistics&id="+channel_id+"&key=AIzaSyD2pVYifyHpdyqc5115-jc7iqWNkFmiWTc", true);
-	xhttp.send();
-	setTimeout(request_data, 2500);
-}
-</script>
+<h1>TO DO BUTTONS</h1>
 
 
  
