--- a/TheTopBulgarianChannels/Views/Shared/_Layout.cshtml
+++ b/TheTopBulgarianChannels/Views/Shared/_Layout.cshtml
@@ -22,7 +22,7 @@
                             <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Index">Home</a>
                         </li>                        
                          <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="YouTubeChannels" asp-action="Index">YouTubeChannels</a>
+                            <a class="nav-link text-dark" asp-area="" asp-controller="YouTubeChannels" asp-action="Index">YouTube</a>
                         </li>
                          <li class="nav-item">
                             <a class="nav-link text-dark" asp-area="" asp-controller="Instagram" asp-action="Index">Instagram</a>
