--- a/TheTopBulgarianChannels/Views/Instagram/Index.cshtml
+++ b/TheTopBulgarianChannels/Views/Instagram/Index.cshtml
@@ -9,9 +9,10 @@
 <p>
     <a asp-action="Create">Create New</a>
 </p>
-<table class="table">
+<table class="table table-striped">
     <thead>
         <tr>
+            <th scope="col">Rank</th>
             <th>
                 @Html.DisplayNameFor(model => model.Name)
             </th>
@@ -25,23 +26,29 @@
         </tr>
     </thead>
     <tbody>
-@foreach (var item in Model) {
-        <tr>
-            <td>
-                @Html.DisplayFor(modelItem => item.Name)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.Followers)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.Posts)
-            </td>
-            <td>
-                <a asp-action="Edit" asp-route-id="@item.Id">Edit</a> |
-                <a asp-action="Details" asp-route-id="@item.Id">Details</a> |
-                <a asp-action="Delete" asp-route-id="@item.Id">Delete</a>
-            </td>
-        </tr>
-}
+        @{
+            var rank = 1;
+            @foreach (var item in Model)
+            {
+                <tr>
+                    <th scope="row">@rank</th>
+                    <td>
+                        @Html.DisplayFor(modelItem => item.Name)
+                    </td>
+                    <td>
+                        @Html.DisplayFor(modelItem => item.Followers)
+                    </td>
+                    <td>
+                        @Html.DisplayFor(modelItem => item.Posts)
+                    </td>
+                    <td>
+                        <a asp-action="Edit" asp-route-id="@item.Id">Edit</a> |
+                        <a asp-action="Details" asp-route-id="@item.Id">Details</a> |
+                        <a asp-action="Delete" asp-route-id="@item.Id">Delete</a>
+                    </td>
+                </tr>
+                rank++;
+            }
+        }
     </tbody>
 </table>
