--- a/TheTopBulgarianChannels/Views/Shared/_Layout.cshtml
+++ b/TheTopBulgarianChannels/Views/Shared/_Layout.cshtml
@@ -6,12 +6,14 @@
     <title>@ViewData["Title"] - TheTopBulgarianChannels</title>
     <link rel="stylesheet" href="~/lib/bootstrap/dist/css/bootstrap.min.css" />
     <link rel="stylesheet" href="~/css/site.css" />
+   
 </head>
 <body>
     <header>
         <nav class="navbar navbar-expand-sm navbar-toggleable-sm navbar-light bg-white border-bottom box-shadow mb-3">
             <div class="container">
-                <a class="navbar-brand" asp-area="" asp-controller="Home" asp-action="Index">TheTopBulgarianChannels</a>
+                <a class="navbar-brand text-black text-bold" style="background-color: white"
+                asp-area="" asp-controller="Home" asp-action="Index">Класацията.БГ</a>
                 <button class="navbar-toggler" type="button" data-toggle="collapse" data-target=".navbar-collapse" aria-controls="navbarSupportedContent"
                         aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
@@ -19,22 +21,22 @@
                 <div class="navbar-collapse collapse d-sm-inline-flex flex-sm-row-reverse">
                     <ul class="navbar-nav flex-grow-1">
                         <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Index">Home</a>
+                            <a class="nav-link text-dark text-bold" asp-area="" asp-controller="Home" asp-action="Index">Home</a>
                         </li>                        
                          <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="YouTubeChannels" asp-action="Index">YouTube</a>
+                            <a class="nav-link text-dark text-bold" asp-area="" asp-controller="YouTubeChannels" asp-action="Index">YouTube</a>
                         </li>
                          <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="Instagram" asp-action="Index">Instagram</a>
+                            <a class="nav-link text-dark text-bold" asp-area="" asp-controller="Instagram" asp-action="Index">Instagram</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="Facebook" asp-action="Index">Facebook</a>
+                            <a class="nav-link text-dark text-bold" asp-area="" asp-controller="Facebook" asp-action="Index">Facebook</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="TikTok" asp-action="Index">TikTok</a>
+                            <a class="nav-link text-dark text-bold" asp-area="" asp-controller="TikTok" asp-action="Index">TikTok</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="Twitter" asp-action="Index">Twitter</a>
+                            <a class="nav-link text-dark text-bold" asp-area="" asp-controller="Twitter" asp-action="Index">Twitter</a>
                         </li>
                     </ul>
                 </div>
@@ -50,7 +52,7 @@
 
     <footer class="border-top footer text-muted">
         <div class="container">
-            &copy; 2023 - TheTopBulgarianChannels - <a asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a>
+            &copy; Petya Georgieva - <a asp-area="" asp-controller="Home" asp-action="Index">Home</a>
         </div>
     </footer>
     <script src="~/lib/jquery/dist/jquery.min.js"></script>
