--- a/TheTopBulgarianChannels/Views/YouTubeChannels/Index.cshtml
+++ b/TheTopBulgarianChannels/Views/YouTubeChannels/Index.cshtml
@@ -10,7 +10,7 @@
     <a asp-action="Create">Create New</a>
 </p>
 <div class="table">
-    <table id="myTable" class="table table-bordered table-hover table-sm">
+    <table id="myTableYouTube" class="table table-bordered table-hover table-sm">
         <thead>
             <tr>
 
