--- a/TheTopBulgarianChannels/Views/Facebook/Index.cshtml
+++ b/TheTopBulgarianChannels/Views/Facebook/Index.cshtml
@@ -9,26 +9,23 @@
 <p>
     <a asp-action="Create">Create New</a>
 </p>
-<table class="table table-striped">
-    <thead>
-        <tr>
-            <th scope="col">Rank</th>
+<div class="table">
+    <table id="myTableFacebook" class="table table-bordered table-hover table-sm">
+        <thead>
+            <tr>
             <th>
                 @Html.DisplayNameFor(model => model.Name)
             </th>
             <th>
                 @Html.DisplayNameFor(model => model.Followers)
             </th>
-            <th></th>
+            <th scope="col">Action</th>
         </tr>
     </thead>
     <tbody>
-        @{
-            var rank = 1;
             @foreach (var item in Model)
             {
-                <tr>
-                    <th scope="row">@rank</th>
+                <tr>                   
                     <td>
                         @Html.DisplayFor(modelItem => item.Name)
                     </td>
@@ -40,9 +37,8 @@
                         <a asp-action="Details" asp-route-id="@item.Id">Details</a> |
                         <a asp-action="Delete" asp-route-id="@item.Id">Delete</a>
                     </td>
-                </tr>
-                rank++;
-            }
-        }
+                </tr>             
+            }       
     </tbody>
 </table>
+</div>
