--- a/TheTopBulgarianChannels/Views/Shared/_Layout.cshtml
+++ b/TheTopBulgarianChannels/Views/Shared/_Layout.cshtml
@@ -40,6 +40,9 @@
                         <li class="nav-item">
                             <a class="nav-link text-dark text-bold" asp-area="" asp-controller="Twitter" asp-action="Index">Twitter</a>
                         </li>
+                        <li class="nav-item">
+                            <a class="nav-link text-dark text-bold" asp-area="" asp-controller="Ajax" asp-action="Index">AJAX</a>
+                        </li>
                     </ul>
                 </div>
                 
